crates/alien-permissions/tests/snapshots/gcp_runtime__gcp_iam_bindings_resource_binding.snap
---
source: crates/alien-permissions/tests/gcp_runtime.rs
expression: result
---
{
  "bindings": [
    {
      "role": "projects/my-project/roles/storageDataRead",
      "members": [
        "serviceAccount:my-sa@my-project.iam.gserviceaccount.com"
      ]
    }
  ]
}
